# VehicleOS-RT

./: README.md  west.yml
app/vehicleos_rt_mvp/: CMakeLists.txt  prj.conf
app/vehicleos_rt_mvp/src/: main.c
docker/: Dockerfile  run.sh
docs/: 01_architecture.md  02_mvp_plan_agent.md  03_mvp_build_steps_agent.md
domains/body/lambdas/: body_door_controller.c  body_lambdas.h  body_lambdas_init.c  body_sensor_sim.c
domains/body/signals/: constraints.yaml  package.yaml  vss.yaml
domains/cabin/lambdas/: cabin_hvac_controller.c  cabin_lambdas.h  cabin_lambdas_init.c  cabin_precondition_procedure.c  cabin_sensor_sim.c
domains/cabin/signals/: constraints.yaml  package.yaml  vss.yaml
domains/powertrain/lambdas/: chassis_lateral_controller_sim.c  chassis_longitudinal_controller_sim.c  powertrain_lambdas.h  powertrain_lambdas_init.c  powertrain_speed_sim.c
domains/powertrain/signals/: constraints.yaml  package.yaml  vss.yaml
platform/bus/: bus.c  bus.h
platform/gateway/: gateway.c  gateway.h
platform/policy/: policy.c  policy.h
platform/sdk/: vo_sdk.c  vo_sdk.h
platform/store/: store.c  store.h
scripts/: build_qemu.sh  gen_signals.sh  run_demo.sh  run_qemu.sh
tools/: cli_client.c  cli_client.h
tools/codegen/: gen_signals.py
